# python-project-template

./: .pre-commit-config.yaml  README.md  setup.cfg  setup.py
