[metadata]
name = template
version = 0.1.0
description = Python project template.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IndexSeek/python-project-template
author = Tyler White
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    docs*
    tests*
    testing*

[options.extras_require]
dev =
    pre-commit>=3
    pytest>=7.4.0
